<resources>
    <string name="app_name">SmartBike</string>
    <string name="welcometext">Welcome to Smart Bike!</string>
    <string name="signuptext">Start Your Ride Today!</string>
    <string name="usernamehint">Username&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="passwordhint">Password&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="bikecodeNULL">Bike Identifier: Unknown</string>
    <string name="disconnectwarning">Bike Disconnected!</string>
    <string name="emptybikeIDerror">Error: please enter an valid bike identifier</string>
    <string name="bikeIdentifier">C6:12:0F:68:4C:91</string>

    <string name="lightstateON">Light State: ON</string>
    <string name="lightstateAUTO">Light State: AUTO</string>
    <string name="lightmodeSOLID">Light Mode: Solid</string>
    <string name="lightmodeBLINK">Light Mode: Blink</string>

    <string name="unlockDialogYes">Connect</string>
    <string name="unlockDialogNo">Cancel</string>
    <string name="unlockDialogTitle">Choose bike to connect</string>
    <string name="unlockDialogHint">Enter bike identifier here</string>

    <string name="enterYourLocation">New ride? Enter your location here</string>
    <string name="addRide">Add Your Ride</string>
    <string name="logout">Log Out</string>
    <string name="deleteRide">Are you sure to delete this ride?</string>
    <string name="emptylocationerror">Error: location CANNOT be empty!</string>
    <string name="addNewRide">Hooray! Added a new ride!</string>

    <string name="connectionYes">Connection: Connected</string>
    <string name="connectionNo">Connection: Disconnected</string>
    <string name="bikeID">Bike Identifier:&#160;</string>

    <string name="lockhint">Press to Lock</string>
    <string name="unlockhint">Press to Unlock</string>

    <string name="login_wrongPassword">Wrong email or password, please try again!</string>
    <string name="login_notMember">You are NOT a member yet! Please sign up.</string>
    <string name="signup_success">Welcome! You are now a member!</string>

    <string name="signin_redirect">Already a member? <b><u>Sign in</u></b> here!</string>
    <string name="signup_redirect">No account? <b><u>Sign up</u></b> here!</string>
    <string name="signup_emailhint">Email Address</string>
    <string name="signup_passwordhint">Password (<b>> 5</b> characters)</string>
    <string name="signup_fail">Error occurred: Signup failed!</string>
    <string name="signup_emailcollision">User with this email already exists!</string>
    <string name="signup_emailerror">Please enter a valid email address.</string>
    <string name="signup_changeemail">Please use another email.</string>
    <string name="signup_passworderror">Your password must contain at least 5 characters.</string>

    <string name="stealalert">Your bike may be stolen!</string>
</resources>
