<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="edu.stanford.me202.smartbike.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/signuptext"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/email"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/username_text"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_emailhint" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/cloudpassword"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/password_text"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/signup_passwordhint" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:src="@drawable/check"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:scaleType="fitCenter"
            android:background="@android:color/white"
            android:onClick="signUp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/signin_redirect"
            android:onClick="signInRedirect"/>

    </LinearLayout>

</LinearLayout>
